# AUV-2023

./: Aditya.txt  Lara.txt  Stanley.txt
Docker/humble-base/: Dockerfile  compose.yml
Docker/humble-base-2/: Dockerfile  compose.yml
Docker/jetson/: Dockerfile  Dockerfile.zed  compose.yml
catkin_ws/: .gitmodules
catkin_ws/src/planner/launch/: semis_dr.launch
catkin_ws/src/planner/src/: semis_dr.py
catkin_ws/src/propulsion/src/: thrust_mapper_utils.py
catkin_ws/src/sensors/src/: dvl_convariance.py
catkin_ws/src/vision/src/: vision_state.py
colcon_ws/src/auv_msgs/: CMakeLists.txt  package.xml
colcon_ws/src/bringup/: CMakeLists.txt  package.xml
colcon_ws/src/bringup/launch/: bringup_launch.py
colcon_ws/src/controls/: package.xml  setup.cfg  setup.py
colcon_ws/src/controls/controls/: __init__.py  init_servers.py  quaternion_pid.py  superimposer.py
colcon_ws/src/controls/controls/clients/: base_client.py  effort_client.py  state_quaternion_pid_client.py
colcon_ws/src/controls/controls/servers/: effort_server.py  state_quaternion_pid_server.py
colcon_ws/src/controls/launch/: controls.launch  controls_launch.py  pid.launch  pid_launch.py
colcon_ws/src/micro-ROS-Agent/micro_ros_agent/: CMakeLists.txt  package.xml
colcon_ws/src/micro_ros_msgs/: CMakeLists.txt
colcon_ws/src/planner/planner/: face_pinger.py  joystick.py  mission_utils.py  missions.py  pooltest.py  quali.py  semis dr.py  semis.py  semis_dr_xy.py
colcon_ws/src/planner/planner/substates/: breadth_first_search.py  in_place_search.py  linear_search.py  navigate_bin.py  navigate_buoy.py  navigate_gate.py  navigate_lane_marker.py  navigate_pinger.py  octagon_task.py  quali.py  trick.py
colcon_ws/src/planner/planner/substates/utility/: controller.py  functions.py  state.py  vision.py
colcon_ws/src/planner/planner/substrates/utility/: controller.py
colcon_ws/src/sensors/: CMakeLists.txt  package.xml
colcon_ws/src/sensors/sensors/: print_hydrophones.py  sensors_status.py
colcon_ws/src/sensors/src/: depth_republish.cpp  dvl_republish.cpp  imu_republish.cpp
colcon_ws/src/sim_bridge/: setup.py
colcon_ws/src/state_estimation/: CMakeLists.txt
colcon_ws/src/state_estimation/src/: odom_republisher.cpp
colcon_ws/src/vision/: package.xml  setup.py
colcon_ws/src/vision/vision/: point_cloud.py  vision_state.py
