<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>launch all the packages and bring the robot into operational state</description>
  <maintainer email="dev@mcgillrobotics.com">McGill Robotics</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/mcgill-robotics/AUV-2025</url>

  <buildtool_depend>colcon</buildtool_depend>

  <depend>state_estimation</depend>

  <!-- Note that controls is a python only package so only exec_depend is required -->
  <exec_depend>controls</exec_depend>
  <exec_depend>planner</exec_depend>
  <exec_depend>propulsion</exec_depend>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
